...

  void _initBoard() async {
    word = [];
    others = [];
    arr1 = [];
    _statusList = [];
    num1 = 0;
    numOFWrongElem = 0;
    _dispText = '';
    setState(() => _isLoading = true);
    data = await fetchWordData(
        widget.gameConfig.gameCategoryId, _maxSize, _maxSize1);
    print('datat  ${data.item1}');
...
