...
    setState(() => _isLoading = true);
    _numbers = _allNumbers.sublist(0, _size * (_size + 1));
    print(_data);
    _num1 = widget.first;
    _num2 = widget.second;
    _result = widget.answer;
    _operator = widget.op;
    _scoreCount = 0;
    setState(() => _isLoading = false);
    _outputList.clear();
    print("printing output list....$_outputList");
    _tempf = 0;
    _tempf1 = 0;
...
